--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "keystone-next postinstall"
   },
   "dependencies": {
+    "@keystone-next/keystone": "^27.0.1",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
