--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "keystone-next postinstall"
   },
   "dependencies": {
+    "@keystone-next/fields-document": "^12.0.0",
     "@keystone-next/keystone": "^27.0.1",
+    "@stitches/react": "^1.2.5",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
