--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@stitches/react": "^1.2.5",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "slugify": "^1.6.2"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
